chore: minor spacing fix

--- a/src/app/pages/company/sponsorship/sponsorship.scss
+++ b/src/app/pages/company/sponsorship/sponsorship.scss
@@ -106,7 +106,7 @@ main-footer {
     transform: translateX(0);
   }
   100% {
-    transform: translateX(-33.33%); // Move by 1/3 since we have 3 sets
+    transform: translateX(-33.33%); // move by 1/3 since we have 3 sets
   }
 }
 
@@ -183,7 +183,8 @@ main-footer {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: #000;
+  background: radial-gradient(circle at 20% 50%, rgba(139, 0, 0, 0.15) 0%, transparent 40%),
+    radial-gradient(circle at 80% 50%, rgba(139, 0, 0, 0.15) 0%, transparent 40%), #000;
 
   @media (max-height: 850px) {
     padding: 2rem 1rem;
@@ -320,6 +321,8 @@ main-footer {
   display: flex;
   justify-content: center;
   align-items: center;
+  background: radial-gradient(circle at 20% 50%, rgba(139, 0, 0, 0.15) 0%, transparent 40%),
+    radial-gradient(circle at 80% 50%, rgba(139, 0, 0, 0.15) 0%, transparent 40%), #000;
 
   .content-container {
     position: relative;
